# agent_1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  code_reviewer.py  designer.py  developer.py  knowledge_engineer.py  orchestrator.py  product_manager.py  project_manager.py  requirement_engineer.py  requirement_reviewer.py  tester.py
config/: settings.py
cost_control/: __init__.py  cost_tracker.py
memory/: __init__.py  project_memory.py
planning/: __init__.py  task_planner.py
tests/: test_agents.py  test_cost_control.py  test_memory.py  test_planning.py  test_tools.py  test_workflow.py
tools/: __init__.py  code_executor.py  file_system.py  mcp_client.py  skill_manager.py
workflow/: __init__.py  langgraph_workflow.py  project_team.py
