[project]
name = "agent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autopep8>=2.3.2",
    "pycodestyle>=2.14.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.1",
    "pydantic>=2.0.0",
]
